--- a/1.md
+++ b/1.md
@@ -329,3 +329,153 @@ To be satisfied, everything above is important. But you also need the *absence* 
 . Very long hours.
 . Pay you feel is unfair.
 . Job insecurity.
+
+Although these sound obvious, people often overlook them. The negative consequences of a long commute can be enough to outweigh many other positive factors.
+
+### 6. Work that fits with the rest of your life
+
+You don’t *have* to get all the ingredients of a fulfilling life from your job. It’s possible to find a job that pays the bills and excel in a side project; or to find a sense of meaning through philanthropy or volunteering; or to build great relationships outside of work.
+
+We’ve advised plenty of people who have done this. There are famous examples too – Einstein had his most productive year in 1905, while working as a clerk at a patent office.
+
+So this last factor is a reminder to consider how your career fits with the rest of your life.
+
+Before we move on, here’s a quick recap of the six ingredients. This is what to look for in a dream job:
+
+1. Work you’re good at,
+1. Work that helps others,
+1. Engaging work that lets you enter a state of flow (freedom, variety, clear tasks, feedback),
+1. Supportive colleagues,
+1. No major negatives like long hours or unfair pay, and
+1. A job that fits your personal life.
+
+(Read more about <a href="/articles/job-satisfaction-research/" target="_blank">our evidence for these six ingredients</a>.)
+
+How can we sum this all up?
+
+## Should you just follow your passion?
+
+“Follow your passion” has become a defining piece of career advice.
+
+![Follow your passion](https://cdn.80000hours.org/wp-content/uploads/2014/10/Follow-your-passion-1024x749.png)[`Source: Google Ngram`]
+
+The idea is that the key to finding a great career is to identify your greatest interest – “your passion” – and pursue a career involving that interest. It’s an attractive message: just commit to your passion, and you’ll have a great career. And when we look at successful people, they *are* often passionate about what they do.
+
+Now, we’re fans of being passionate about your work. The research above shows that intrinsically motivating work makes people a lot happier than a big paycheck.
+
+However, there are three ways “follow your passion” can be misleading advice.
+
+One problem is that it suggests that passion is all you need. But even if you’re deeply interested in the work, if you lack the other six factors, you’ll still be unsatisfied. If a basketball fan gets a job involving basketball, but works with people they hate, receives unfair pay, or finds the work meaningless, they are still going to dislike their job.
+
+In fact, “following your passion” can make it harder to satisfy the six ingredients, because the areas you’re passionate about are likely to be the most competitive, which makes it harder to find a good job.
+
+![Passion vs jobs](https://cdn.80000hours.org/wp-content/uploads/2014/10/Passion-vs-jobs.png)[`<a href="http://web.archive.org/web/20150816224758/http://selfdeterminationtheory.org/SDT/documents/2003_VallerancBlanchardMageauKoesnterRatelleLeonardGagneMacolais_JPSP.pdf" target="_blank">University of Montreal</a> and <a href="http://web.archive.org/web/20150816225221/http://www12.statcan.gc.ca/census-recensement/2006/dp-pd/tbt/Rp-eng.cfm?LANG=E&amp;APATH=3&amp;DETAIL=0&amp;DIM=0&amp;FL=A&amp;FREE=0&amp;GC=0&amp;GID=0&amp;GK=0&amp;GRP=1&amp;PID=92117&amp;PRID=0&amp;PTYPE=88971,97154&amp;S=0&amp;SHOWALL=0&amp;SUB=0&amp;Temporal=2006&amp;THEME=74&amp;VID=0&amp;VNAMEE=&amp;VNAMEF=" target="_blank">Canadian Census Data</a>`]
+
+A second problem is that many people don’t feel like they have a career-relevant passion. Telling them to “follow their passion” makes them feel inadequate. If you don’t have a “passion”, don’t worry. You can still find work you’ll become passionate about.
+
+The third problem is that it can make people needlessly limit their options. If you’re interested in literature, it’s easy to think you must become a writer to have a satisfying career, and ignore other options. It’s also easy to have the idea that your “one true passion” will be immediately obvious, and eliminate options that aren’t immediately satisfying.
+
+But in fact, you can become passionate about new areas. If your work helps others, you practice to get good at it, you work on engaging tasks, and you work with people you like, then you’ll *become* passionate about it. The six ingredients are all about the context of the work, not the content. Ten years ago, we would *never* have imagined being passionate about giving career advice, but here we are, writing this article.
+
+Many successful people are passionate, but often their passion developed alongside their success, and took a long time to discover, rather than coming first. Steve Jobs started out passionate about Zen Buddhism. He got into technology as a <a href="http://www.fastcompany.com/3001441/do-steve-jobs-did-dont-follow-your-passion" target="_blank">way to make some quick cash</a>. But as he became successful, his passion grew, until he became the most famous advocate of “doing what you love”.
+
+![Steve Jobs - advocate of ‘follow your passion’ - was passionate about western history and dance when he was young](//eighty-thousand-hours-wp-production.s3.amazonaws.com/2014/08/apple_pink_logo_with_words.png)[`Steve Jobs – advocate of ‘follow your passion’ – was passionate about Zen Buddhism, western history and dance when he was young.`]
+
+In reality, rather than having a single passion, our interests change often, and <a href="https://80000hours.org/2015/02/we-change-more-than-we-expect-so-keep-your-options-open/" target="_blank">more than we expect</a>. Think back to what you were most interested in five years ago, and you’ll probably find that it’s pretty different from what you’re interested in today.And as we saw above, we’re bad at knowing what really makes us happy.
+
+This all means you have more options for a fulfilling career than you think.
+
+A quick aside before we go on. If you’re finding this guide useful, we’d really appreciate it if you could <a href="https://www.facebook.com/sharer/sharer.php?u=https://80000hours.org/career-guide/job-satisfaction/" target="_blank">share the article on Facebook</a>, and help us reach more people.
+
+## Do what contributes to the world
+
+Rather than “follow your passion”, our slogan for a fulfilling career is the following: get good at something that helps others. Or simply: *do what contributes*.
+
+We highlight “getting good”, because if you find something you’re good at that others value, you’ll have plenty of career opportunities, which gives you the best chance of finding a dream job with all the other ingredients – engaging work, good colleagues, lack of major negatives, and fit with rest of life.
+
+You can have all the other five ingredients, however, and still find your work meaningless. So you need to find a way to help others too.
+
+If you put making a valuable contribution to the world first, you’ll develop passion for what you do – you’ll become more content, ambitious and motivated.
+
+This is what we’ve found in our career advising. For instance, Jess was interested in philosophy as an undergraduate, and considered pursuing a PhD. The problem was that although she finds philosophy interesting, it would have been hard to make a positive impact within it. Ultimately, she thinks this would have made it unfulfilling. Instead, she switched into psychology and public policy, and is now one of the most motivated people we know.
+
+```
+ <div id="case-study-quote-19261" class="panel clearfix">
+                    <div class="col-xs-9 col-sm-8 col-md-9">
+                        <blockquote class="no-indent no-margin-bottom">
+                            <div class="case-study-quote__text">“80,000 Hours has nothing short of revolutionised the way I think about my career.”</div>
+                            <p class="case-study-quote__read-more margin-top-small"><a href="https://80000hours.org/career-guide/member-stories/jess-whittlestone/" class="btn btn-tertiary">Read Jess's story</a></p>
+                        </blockquote>
+                    </div>
+                    <div class="col-xs-3 col-sm-4 col-md-3 image-frame">
+                        <div class="image-mask-circle image-mask-circle-border"> <img src="https://cdn.80000hours.org/wp-content/uploads/2014/10/jess-transparent_0-150x150.png" alt="Jess portrait photo"></div>
+                    </div>
+                </div>
+```
+
+To date, over 1,000 people have made major changes to their career path by following our career advice. Many switched into a field that didn’t initially interest them, but that they believed was important for the world. After developing their skills, finding good people to work with, and the right role, they’ve become deeply satisfied.
+
+Here are two more reasons to focus on getting good at something that helps others.
+
+### You’ll be more successful
+
+If you make it your mission to help others, then people will want to help you succeed.
+
+This sounds obvious, and there’s now empirical evidence to back it up. In the excellent book <a href="http://www.adamgrant.net/#!giveandtake/c1aev" target="_blank"> *Give and Take*</a>, Professor Adam Grant argues that people with a “giving mindset” end up among the most successful. This is both because they get more help, and because they’re more motivated by a sense of purpose.
+
+One caveat is that givers also end up unsuccessful if they focus *too* much on others, and burn out. So you also need the other ingredients of job satisfaction we mentioned earlier, and to set limits on how much you give.
+
+### It’s the right thing to do
+
+The idea that helping others is the key to being fulfilled is hardly a new one. It’s a theme from most major moral and spiritual traditions:
+
+| Set your heart on doing good. Do it over and over again and you will be filled with joy.<br> – Buddha
+ A man’s true wealth is the good he does in this world.<br> – Muhammad
+ Love your neighbour as you love yourself.<br> – Jesus Christ
+ Every man must decide whether he will walk in the light of creative altruism or in the darkness of destructive selfishness.<br> – Martin Luther King, Jr.
+ 
+What’s more, as we’ll explain in the next section, as a college graduate in a developed country today, you have an enormous opportunity to help others through your career. Ultimately, this is the real reason to focus on helping others – the fact that it’ll make you more personally fulfilled is just a bonus.
+
+## Conclusion
+
+To have a dream job, don’t worry too much about money and stress, and don’t endlessly self-reflect to find your one true passion.
+
+Rather, get good at something that helps others. It’s best for you, and it’s best for the world. This is the reason we set up 80,000 Hours – our mission is to help you find a career that contributes.
+
+But which jobs help people? Can one person really make much difference? That’s what we’ll answer in the next section.
+
+ <div class="panel clearfix">
+                    <h2><span id="apply-this-to-your-own-career" class="toc-anchor"></span>Apply this to your own career</h2>
+                    <p>These six ingredients, especially helping others and getting good at your job, can act as guiding lights – they’re what to aim to find in a dream job long-term.</p>
+                    <p>Here are some exercises to help you start applying them.</p>
+                    <ol>
+                        <li>Practice using the six ingredients to make some comparisons. Pick two options you’re interested in, then score them from one to five on each factor. You can use <a href="https://docs.google.com/document/d/12e1ei-CUNHBPr6U_k89ylHQPQ8wwh9usPO6GRVnPQyA/edit#heading=h.6l31h1ur692w" target="_blank">this table</a>.</li>
+                        <li>The six ingredients we list are only a starting point. There may be other factors that are especially important to you, so we also recommend doing the following exercises. They’re not perfect – as we saw earlier, our memories of what we’ve found fulfilling can be unreliable – but completely ignoring your past experience isn’t wise either.<a id="fn-ref-11" href="#fn-11" rel="footnote" class="footnote-link" aria-label="Footnote" data-hasqtip="10" oldtitle="<p>You can get more accurate information on what you enjoy over time by rating your happiness at the end of each day. That way you don’t need to rely on unreliable memory.</p>
+" title=""><sup>11</sup></a>
+                            <ul>
+                                <li>When have you been most fulfilled in the past? What did these times have in common?</li>
+                                <li>Imagine you just found out you’re going to die in ten years. What would you spend your time doing?</li>
+                                <li>Can you make any of our six factors more specific? e.g. what *kinds* of people do you most like to work with?</li>
+                            </ul>
+                            <p>These questions should give you hints about what you find most fulfilling.
+                        </p></li>
+                        <li>Now, combine our list with your own thoughts to determine the four to eight factors that are most important to you in a dream job.</li>
+                        <li>When you’re comparing your options in the future, you can use this list of factors to work out which is best. Don’t expect to find an option that’s best on every dimension, rather, focus on finding the option that’s best on balance.</li>
+                    </ol>
+                    <p><strong><a href="https://www.youtube.com/watch?v=G_l72q9K3Fw" target="_blank">Take a break</a></strong></p>
+                </div>
+                <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
+                    <h2 class="no_toc"><small>Read next:</small> Part 2: Which jobs really help people, and how much could you accomplish?</h2>
+                    <p><a href="/career-guide/how-much-difference-can-one-person-make/" class="btn btn-primary">Continue →</a></p>
+                    <p>Or if you’re new, <a href="/career-guide/" target="_blank">get an overview</a> of the whole career guide.</p>
+                    <p>No time right now? Join <a href="/newsletter/" target="_blank">our newsletter</a> and we’ll send you one article each week:</p>
+                    <form data-80k-object-id="" action="/" method="post" class="form-newsletter form-newsletter-signup-step-1 margin-bottom-smaller">
+                        <div class="mc-field-group input-group"> <input type="email" value="" name="email" class="form-control required email" placeholder="Email address" id="input_email"> <span class="submit input-group-btn input-group-btn-right"> <input type="submit" id="mc-embedded-subscribe" value="Sign up" class="btn btn-primary "> </span></div>
+                        <div><input name="_eightyk_action" value="mailchimp_add_subscriber" type="hidden"> <input name="redirect_path" value="/newsletter/step-2/ " type="hidden"></div>
+                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_abc12f58bbe8075560abdc5b7_43bc1ae55c" tabindex="-1" value=""></div>
+                        <p></p>
+                    </form>
+                    <p></p>
+                    <p>Or <a href="https://www.amazon.com/80-000-Hours-fulfilling-career-ebook/dp/B01M70QISP/">order the whole guide as a book</a>.</p>
+                </div>
+            </div>
