--- a/1.md
+++ b/1.md
@@ -429,10 +429,10 @@ One caveat is that givers also end up unsuccessful if they focus *too* much on o
 
 The idea that helping others is the key to being fulfilled is hardly a new one. It’s a theme from most major moral and spiritual traditions:
 
-| Set your heart on doing good. Do it over and over again and you will be filled with joy.<br> – Buddha
- A man’s true wealth is the good he does in this world.<br> – Muhammad
- Love your neighbour as you love yourself.<br> – Jesus Christ
- Every man must decide whether he will walk in the light of creative altruism or in the darkness of destructive selfishness.<br> – Martin Luther King, Jr.
+> <p>Set your heart on doing good. Do it over and over again and you will be filled with joy.<br> – Buddha</p>
+ <p>A man’s true wealth is the good he does in this world.<br> – Muhammad</p>
+ <p>Love your neighbour as you love yourself.<br> – Jesus Christ</p>
+ <p>Every man must decide whether he will walk in the light of creative altruism or in the darkness of destructive selfishness.<br> – Martin Luther King, Jr.</p>
  
 What’s more, as we’ll explain in the next section, as a college graduate in a developed country today, you have an enormous opportunity to help others through your career. Ultimately, this is the real reason to focus on helping others – the fact that it’ll make you more personally fulfilled is just a bonus.
 
