--- a/1.md
+++ b/1.md
@@ -90,7 +90,9 @@ One of the leading job rankings in the US, provided by Careercast, rates jobs on
 
 Based on this, the best job in 2015 was: actuary.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] That is, someone who uses statistics to measure and manage risks, often in the insurance industry.
 
-It’s true that actuaries are more satisfied with their jobs than average, but they’re not among the most satisfied.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Only 36% say their work is meaningful,[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] so being an actuary isn’t a particularly fulfilling career.
+It’s true that actuaries are more satisfied with their jobs than average, but they’re not among the most satisfied.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Only 36% say their work is meaningful,[^:`<p>Payscale’s surveys, which cover tens of thousands of workers, found only 36% of actuaries found their work meaningful. Job satisfaction was also high at 80%, but a significant number of jobs were rated over 80%.</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <p></p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list</a>.</p>`] so being an actuary isn’t a particularly fulfilling career.
 
 So the *Careercast* list isn’t capturing everything. In fact, the evidence suggests that money and avoiding stress aren’t that important.
 
@@ -432,7 +434,7 @@ The idea that helping others is the key to being fulfilled is hardly a new one. 
  <p>A man’s true wealth is the good he does in this world.<br> – Muhammad</p>
  <p>Love your neighbour as you love yourself.<br> – Jesus Christ</p>
  <p>Every man must decide whether he will walk in the light of creative altruism or in the darkness of destructive selfishness.<br> – Martin Luther King, Jr.</p>
- 
+
 What’s more, as we’ll explain in the next section, as a college graduate in a developed country today, you have an enormous opportunity to help others through your career. Ultimately, this is the real reason to focus on helping others – the fact that it’ll make you more personally fulfilled is just a bonus.
 
 ## Conclusion
