--- a/1.md
+++ b/1.md
@@ -98,7 +98,7 @@ So the *Careercast* list isn’t capturing everything. In fact, the evidence sug
 
 ### Money makes you happier, but only a little
 
-It’s a cliche that “you can’t buy happiness”, but at the same time, financial security is among most people’s <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf" target="_blank">top career priorities</a>[^:` Net Impact, What Workers Want in 2012 <br> See Figure 1.1 <br> <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf">https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf</a>`]. Moreover, when people are asked what would most improve the quality of their lives, the most common answer is more money. [^:`|When individuals are asked what would most improve the quality of their lives, the most common response is a higher income</blockquote> Judge, Timothy A., et al. "The relationship between pay and job satisfaction: A meta-analysis of the literature." Journal of Vocational Behavior 77.2 (2010): 157-167. <br> <a href="http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf">http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf</a>`] What’s going on here? Which side is right?
+It’s a cliche that “you can’t buy happiness”, but at the same time, financial security is among most people’s <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf" target="_blank">top career priorities</a>[^:` Net Impact, What Workers Want in 2012 <br> See Figure 1.1 <br> <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf">https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf</a>`]. Moreover, when people are asked what would most improve the quality of their lives, the most common answer is more money. [^:`<blockquote>When individuals are asked what would most improve the quality of their lives, the most common response is a higher income</blockquote> Judge, Timothy A., et al. "The relationship between pay and job satisfaction: A meta-analysis of the literature." Journal of Vocational Behavior 77.2 (2010): 157-167. <br> <a href="http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf">http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf</a>`] What’s going on here? Which side is right?
 
 A lot of the research on this question is remarkably low quality. But several recent major studies in economics offer more clarity. We <a href="/articles/money-and-happiness/">reviewed the best studies available</a>, and the truth turns out to lie in the middle: money *does* make you happy, but only a little.
 
