--- a/1.md
+++ b/1.md
@@ -90,9 +90,8 @@ One of the leading job rankings in the US, provided by Careercast, rates jobs on
 
 Based on this, the best job in 2015 was: actuary.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] That is, someone who uses statistics to measure and manage risks, often in the insurance industry.
 
-It’s true that actuaries are more satisfied with their jobs than average, but they’re not among the most satisfied.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Only 36% say their work is meaningful,[^:`<p>Payscale’s surveys, which cover tens of thousands of workers, found only 36% of actuaries found their work meaningful. Job satisfaction was also high at 80%, but a significant number of jobs were rated over 80%.</p>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <p></p>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list</a>.</p>`] so being an actuary isn’t a particularly fulfilling career.
+It’s true that actuaries are more satisfied with their jobs than average, but they’re not among the most satisfied.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Only 36% say their work is meaningful,[^:`Payscale’s surveys, which cover tens of thousands of workers, found only 36% of actuaries found their work meaningful. Job satisfaction was also high at 80%, but a significant number of jobs were rated over 80%.<br>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list</a>.`] so being an actuary isn’t a particularly fulfilling career.
 
 So the *Careercast* list isn’t capturing everything. In fact, the evidence suggests that money and avoiding stress aren’t that important.
 
@@ -143,24 +142,24 @@ To customise this threshold for yourself, make the following adjustments (all pr
 . Add more if you’re especially motivated by money (or subtract some if you have frugal tastes).
 . Add 15% in order to be able to save for retirement (or however much you personally need to save in order to be able to maintain the standard of living described above).
 
-The average college graduate in the United States has recently earned about $77,000 per year over his or her working life, while the average Ivy League graduate earns over $110,000.[^:`<p><strong>College grad earnings</strong></p>
-<p>Source:<br />
-<br />
+The average college graduate in the United States has recently earned about $77,000 per year over his or her working life, while the average Ivy League graduate earns over $110,000.[^:`<p><strong>College grad earnings</strong><br>
+Source:<br>
+<br>
 Carnevale, Anthony P., Stephen J. Rose, and Ban Cheah. "The college payoff: Education, occupations, lifetime earnings." (2011).<br />
-<a href="https://cew.georgetown.edu/wp-content/uploads/2014/11/collegepayoff-complete.pdf">https://cew.georgetown.edu/wp-content/uploads/2014/11/collegepayoff-complete.pdf</a></p>
-<p>Working:</p>
-<blockquote><p>
+<a href="https://cew.georgetown.edu/wp-content/uploads/2014/11/collegepayoff-complete.pdf">https://cew.georgetown.edu/wp-content/uploads/2014/11/collegepayoff-complete.pdf</a>
+<br>Working:<br>
+<blockquote><br>
  "the mean (average) earnings of those with a Bachelor’s degree is $500,000 higher than the median ($2.7 million)"
-</p></blockquote>
-<p>They are using a 40 year career to calculate working income:</p>
-<blockquote><p>
+<br></blockquote>
+<br>They are using a 40 year career to calculate working income:<br>
+<blockquote><br>
  "Overall, the median lifetime earnings for all workers are $1.7 million, which is just under $42,000 per year ($20 per hour). Over a 40-year career, those who didn’t earn a high school diploma or GED are expected to bring in less than $1 million, which translates into slightly more than $24,000 a year ($11.70 per hour)."
-</p></blockquote>
-<p>So 2.7 million / 40 = $67,500</p>
-<p>This figure was for 2011, but wages have grown since then. In Jan 2011, average wages per hour in the US were $22.85 and were $26 in Jan 2017. That’s growth of 14%, which suggests that the average college graduate now earns $77,000. This is likely an underestimate, because college graduate earnings have been growing faster than average earnings. Source: <a href="https://fred.stlouisfed.org/series/CES0500000003">FRED Economic Data</a>, “Average Hourly Earnings of All Employees: Total Private (CES0500000003)”, retrieved 5-Feb-2017. This growth matches inflation, which was also <a href="http://www.inflation.eu/inflation-rates/united-states/historic-inflation/cpi-inflation-united-states.aspx">about 14% over the period</a>.</p>
-<p><strong>Mean earnings for US Ivy League grads</strong></p>
-<p>It's hard to find comparable data for just Ivy League grads. Payscale found a median mid-career salary of over $104,000, where mid-career is defined as over 10 years.</p>
-<p><a href="http://www.payscale.com/college-salary-report/best-schools-by-type/bachelors/ivy-league-schools#fullText">Source</a>, retrieved 12 Feb 2016.</p>
+<br></blockquote>
+<p>So 2.7 million / 40 = $67,500<br>
+<p>This figure was for 2011, but wages have grown since then. In Jan 2011, average wages per hour in the US were $22.85 and were $26 in Jan 2017. That’s growth of 14%, which suggests that the average college graduate now earns $77,000. This is likely an underestimate, because college graduate earnings have been growing faster than average earnings. Source: <a href="https://fred.stlouisfed.org/series/CES0500000003">FRED Economic Data</a>, “Average Hourly Earnings of All Employees: Total Private (CES0500000003)”, retrieved 5-Feb-2017. This growth matches inflation, which was also <a href="http://www.inflation.eu/inflation-rates/united-states/historic-inflation/cpi-inflation-united-states.aspx">about 14% over the period</a>.<br>
+<p><strong>Mean earnings for US Ivy League grads</strong><br>
+<p>It's hard to find comparable data for just Ivy League grads. Payscale found a median mid-career salary of over $104,000, where mid-career is defined as over 10 years.<br>
+<p><a href="http://www.payscale.com/college-salary-report/best-schools-by-type/bachelors/ivy-league-schools#fullText">Source</a>, retrieved 12 Feb 2016.<br>
 <p>Our guess is that the Payscale data is too high, because people with higher incomes will be more likely to fill out the survey. On the other hand, income only peaks after 20-30 years, so the figure for 10+ years probably under-reports the overall average. Moreover, the median will be less than the mean.</p>
 <p>Overall, we’re pretty confident that the mean lifetime average for Ivy League students is over $100,000, but we’re still looking for better data.</p>
 <p>If you want to estimate your future income, then you should also account for future wage growth (which has been about 2% historically). We ignore this here, and only estimate current income.</p>`] The upshot is that if you’re a college graduate in the US (or a similar country), then you’ll likely end up well into the range where more income has almost no effect on your happiness.
