--- a/1.md
+++ b/1.md
@@ -132,7 +132,7 @@ Standard conversion rates are the following:</p>
 <p>These are approximations, but reasonable ones used by international organisations. They are <a href="https://web.archive.org/web/20160302122348/http://www.ifs.org.uk/wheredoyoufitin/about.php">described here by the UK Institute for Fiscal Studies</a>.</p>
 <p>For the sake of simplicity we will assume that on average across their adult lives people are in a household with an adult couple and half a child. This is just an average - some people will be single, while some will be supporting multiple children, at least for some of their lives.</p>
 <p>Using this approximation means that a single individual requires about 1/1.9 = 53% as much as a typical household, averaged over their adult lives, to achieve the same standard of living.</p>
-<p>In this case, 53% of $50,000-$75,000 for a household represents $27,000-$40,000 for an individual.</p>`]
+<p>In this case, 53% of $50,000-$75,000 for a household represents $27,000-$40,000 for an individual.`]
 
 To customise this threshold for yourself, make the following adjustments (all pre-tax):
 
@@ -162,7 +162,7 @@ Carnevale, Anthony P., Stephen J. Rose, and Ban Cheah. "The college payoff: Educ
 <p><a href="http://www.payscale.com/college-salary-report/best-schools-by-type/bachelors/ivy-league-schools#fullText">Source</a>, retrieved 12 Feb 2016.<br>
 <p>Our guess is that the Payscale data is too high, because people with higher incomes will be more likely to fill out the survey. On the other hand, income only peaks after 20-30 years, so the figure for 10+ years probably under-reports the overall average. Moreover, the median will be less than the mean.</p>
 <p>Overall, we’re pretty confident that the mean lifetime average for Ivy League students is over $100,000, but we’re still looking for better data.</p>
-<p>If you want to estimate your future income, then you should also account for future wage growth (which has been about 2% historically). We ignore this here, and only estimate current income.</p>`] The upshot is that if you’re a college graduate in the US (or a similar country), then you’ll likely end up well into the range where more income has almost no effect on your happiness.
+<p>If you want to estimate your future income, then you should also account for future wage growth (which has been about 2% historically). We ignore this here, and only estimate current income.`] The upshot is that if you’re a college graduate in the US (or a similar country), then you’ll likely end up well into the range where more income has almost no effect on your happiness.
 
 (Read much more <a href="/articles/money-and-happiness/" target="_blank">about our evidence</a>.)
 
