--- a/1.md
+++ b/1.md
@@ -275,8 +275,7 @@ Retrieved 12 Feb 2016</p>
 <p></p>
 <p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/most-meaningful-jobs">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/most-meaningful-jobs</a></p>
 <p></p>
-<p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/methodology">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/methodology</a></p>
-`]
+<p><a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/methodology">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/methodology</a>`]
 
 . Revenue analyst
 . <a href="https://www.youtube.com/watch?v=vF12rS6w25M" target="_blank">Fashion designer</a>
